--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_dog_profile">DogProfile</string>
+    <string name="title_activity_new_dog">NewDog</string>
 </resources>
